<resources>
    <string name="app_name">Parcel Router</string>
    <string name="login_actvity_title">로그인</string>
    <string name="login_guide_title">사용을 위해서는 먼저 로그인해주세요</string>
    <string name="user_account_title">이메일 계정</string>
    <string name="user_account_hint">등록된 이메일 계정</string>
    <string name="password_title">비밀번호</string>
    <string name="password_hint">등록된 비밀번호</string>
    <string name="sign_in_button_title">로그인</string>
    <string name="create_account_guide_text">계정이 없어 새로 만들어야 하시면,</string>
    <string name="create_account_button_title">새로운 계정 만들기</string>
    <string name="create_account_activity_title">신규 계정 생성</string>
    <string name="create_account_guide_title">계정 생성에 필요한 정보를 입력해주세요</string>
    <string name="create_account_user_account_hint">kd.hong@google.com</string>
    <string name="create_account_password_hint">6자리이상, 한글 미포함</string>
    <string name="password_confirm_title">비밀번호 확인</string>
    <string name="password_confirm_hint">비밀번호 재입력</string>
    <string name="display_name_title">표시할 이름</string>
    <string name="display_name_hint">홍길동</string>
    <string name="mobile_contact_title">휴대전화</string>
    <string name="mobile_contact_hint">010-1234-5678</string>
    <string name="dialog_title_confirm">확인</string>
    <string name="check_field_validity_button_title">입력정보 유효성 검사</string>
    <string name="invalid_email_alert_title">잘못된 이메일 주소</string>
    <string name="invalid_email_alert_message">입력하신 계정이 적절한 이메일 형식이 아닙니다. 올바른 형식의 이메일 주소를 넣어주세요.</string>
    <string name="user_not_found_alert_title">존재하지 않는 계정</string>
    <string name="user_not_found_alert_message">입력하신 계정 정보가 없습니다. 계정이 없으시면, 아래 "새로 계정 만들기" 선택하여 새로운 계정을 만들어주세요.</string>
    <string name="user_disabled_alert_title">비활성화된 계정</string>
    <string name="user_disabled_alert_message">입력한 사용자 계정이 관리자에 의해서 비활성화되었습니다. 관리자에게 문의해주세요.</string>
    <string name="wrong_password_alert_title">잘못된 비밀번호</string>
    <string name="wrong_password_alert_message">입력하신 비밀번호가 틀렸습니다. 계정 생성 시, 등록한 비밀번호를 입력해주세요.</string>
    <string name="empty_input_field_alert_title">부족한 입력 정보</string>
    <string name="empty_input_field_alert_message">계정 정보나 비밀 번호가 비어있습니다. 올바른 정보로 채워주세요.</string>
    <string name="invalid_password_alert_title">잘못된 비밀번호</string>
    <string name="invalid_password_alert_message">비밀번호가 잘못되었습니다. 최소 6자리 이상의 올바른 비밀번호를 입력해주세요.</string>
    <string name="invalid_password_confirm_alert_title">부정확한 확인 비밀번호</string>
    <string name="invalid_password_confirm_alert_message">\"비밀번호\"와 같은 \"확인 비밀번호\"를 입력해주세요.</string>
    <string name="invalid_phone_num_alert_title">잘못된 전화번호</string>
    <string name="invalid_phone_num_alert_message">올바른 형식의 전화번호를 입력해주세요.</string>
    <string name="creating_new_account">새로운 계정을 생성중입니다.</string>
    <string name="invalid_display_name_alert_title">잘못된 이름</string>
    <string name="invalid_display_name_alert_message">이름 필드를 비워둘 수 없습니다. 정확한 이름을 입력해주세요.</string>
    <string name="network_failure_title">네트워크 오류</string>
    <string name="network_failure_message">네트워크 오류로 접속을 할 수 없습니다. 데이터가 활성화되었는지 확인해주세요.</string>
    <string name="weak_passworkd_alert_title">비밀번호 적합성 오류</string>
    <string name="weak_password_alert_message">입력한 비밀번호가 부적합합니다. 최소 6자리 이상의 올바른 비밀번호를 입력해주세요.</string>
    <string name="email_already_in_use_alert_title">이미 사용중인 이메일 계정</string>
    <string name="email_already_in_use_alert_message">입력하신 이메일 계정이 이미 사용중입니다. 사용하지 않은 이메일로 계정을 생성해주세요.</string>
    <string name="invalid_credential_alert_title">사용자 자격증명 오류</string>
    <string name="invalid_credential_alert_message">사용자 자격증명이 잘못되었거나 만료되었습니다.</string>
    <string name="sign_out_text">로그아웃</string>
    <string name="sign_out_alert_title">로그아웃</string>
    <string name="sign_out_alert_message">로그아웃을 하시겠습니까?</string>
    <string name="text_yes">예</string>
    <string name="text_no">아니오</string>
    <string name="disconnected_text">접속 해제됨</string>
    <string name="view_parcel_item_per_courier">배송기사별 보기</string>
    <string name="view_location_in_mapview">지도에서 보기</string>
    <string name="view_itme_in_listview">배송목록 조회</string>
    <string name="upload_item_from_file">배송목록 업로드</string>
    <string name="translate_address">고객주소를 위치정보로 변환하여, 서버에 저장하는 중입니다.</string>
    <string name="all_couriers">모든 배송기사</string>
    <string name="default_courier_number">기본값(60개/명)</string>
    <string name="courier_name_title">배송 기사명 : </string>
    <string name="courier_number_title">배송 기사 수 : </string>
    <string name="courier_date_title">배송 날짜 : </string>
    <string name="default_courier_name">모든 배송기사</string>
    <string name="default_courier_date">배송 날짜</string>
    <string name="update_parcel_list">배달항목 업데이트</string>
    <string name="change_parcel_view">지도에서 보기</string>
    <string name="delivered">배송완료</string>
    <string name="delivering">배송중</string>
    <string name="customer">고객명</string>
    <string name="delivery_note">배송 메모</string>
    <string name="remark">특이 사항</string>
    <string name="courier_sel_dialog_title">배송 기사를 선택해주세요.</string>
    <string name="yes">예</string>
    <string name="cancel">취소</string>
    <string name="complete_without_msg">전송 없이 완료</string>
    <string name="complete_with_msg">전송 후 완료</string>
    <string name="query_delivery_complete_title">배송완료 처리</string>
    <string name="query_delivery_complete_message">배송완료 처리를 위해서 메세지를 보내시겠습니까?</string>
    <string name="need_manual_input">위치정보를 얻지 못했습니다. 주소를 직접 입력해주세요.</string>
    <string name="complete_message_title">배송메세지 보내기</string>
    <string name="cluster_route_str">물류분배 및 최적경로</string>
    <string name="title_activity_map_view">MapViewActivity</string>
    <string name="back_to_list">리스트 화면으로 돌아가기</string>
</resources>
