<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <TextView
        android:id="@+id/textLogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:padding="5dp"
        android:textStyle="normal"
        android:textColor="@color/colorPrimary"
        android:gravity="center"
        android:textSize="20dp"

        android:text="@string/login_actvity_title" />

    <TextView
        android:id="@+id/signInTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="14dp"
        android:layout_below="@id/textLogIn"
        android:layout_alignStart="@id/loginLayer"
        android:layout_alignEnd="@id/loginLayer"
        android:gravity="center"
        android:padding="10dp"
        android:textColor="#FFFFFF"
        android:background="@color/colorPrimary"
        android:text="@string/login_guide_title" />

    <RelativeLayout
        android:id="@+id/loginLayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signInTitleText"
        android:layout_centerHorizontal="true"
        android:padding="15dp"
        android:background="#33000000">

        <TextView
            android:id="@+id/titleEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="8dp"
            android:text="@string/user_account_title"
            android:textSize="14dp"
            android:textColor="#545454" />

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/titleEmail"
            android:layout_marginLeft="7dp"
            android:layout_alignBaseline="@id/titleEmail"
            android:ems="10"
            android:background="#80FAF6F6"
            android:hint="@string/user_account_hint"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textSize="14dp"
            android:textColor="#454545"/>

        <TextView
            android:id="@+id/titlePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:layout_below="@id/titleEmail"
            android:layout_alignEnd="@id/titleEmail"
            android:text="@string/password_title"
            android:textSize="14dp"
            android:textColor="#545454"/>

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/titlePassword"
            android:layout_alignBaseline="@id/titlePassword"
            android:layout_alignEnd="@id/editEmail"
            android:layout_alignStart="@id/editEmail"
            android:background="#80FAF6F6"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textSize="14dp"
            android:textColor="#454545"/>

        <Button
            android:id="@+id/signInButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/titlePassword"
            android:layout_alignStart="@id/titleEmail"
            android:layout_alignEnd="@id/editPassword"
            android:layout_marginTop="20dp"
            android:background="#29B6F6"
            android:text="@string/sign_in_button_title"
            android:textColor="#FFFFFF"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/createUserGuideText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account_guide_text"
            android:layout_below="@id/signInButton"
            android:layout_marginTop="15dp"
            android:layout_centerHorizontal="true"
            android:textSize="14dp"
            android:textColor="#545454"/>

        <Button
            android:id="@+id/createAccountButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/createUserGuideText"
            android:layout_alignStart="@id/titleEmail"
            android:layout_alignEnd="@id/editPassword"
            android:layout_marginTop="8dp"
            android:background="#29B6F6"
            android:focusable="false"
            android:text="@string/create_account_button_title"
            android:textColor="#FFFFFF"
            android:textSize="14dp" />
    </RelativeLayout>

</RelativeLayout>